# biobox-analytics

./: .gitignore  README.md  pyproject.toml  setup.py
biobox_analytics/: __init__.py  _setup.py
biobox_analytics/assets/: ENSEMBL_NCBI_MAPPING.csv  hpoa_extras.json
biobox_analytics/core/: __init__.py  _concept.py  _edge.py  _node.py  _relationship.py  _relationship_group.py
biobox_analytics/data/: __init__.py
biobox_analytics/data/adapters/: _base.py  chipseq.py
biobox_analytics/data/adapters/adapter/: __init__.py
biobox_analytics/data/adapters/alliance_genome/: __init__.py
biobox_analytics/data/adapters/chipseq/: __init__.py  _structs.py
biobox_analytics/data/adapters/genome/: __init__.py  _structs.py
biobox_analytics/data/adapters/go/: __init__.py  _structs.py
biobox_analytics/data/adapters/mgi/: __init__.py
biobox_analytics/data/adapters/scatac/: __init__.py  _structs.py
biobox_analytics/data/adapters/scrna/: __init__.py  _structs.py
biobox_analytics/data/schemas/: base.yaml  celltype.yaml  chipseq.yaml  genome.yaml  go.yaml  single_cell.yaml  tissue.yaml
biobox_analytics/integrations/: __init__.py  _lamindb.py
biobox_analytics/utils/: __init__.py
notebooks/: BxCli.ipynb  alliance-genome.ipynb  bx-lamin-integration.ipynb
notebooks/genome/: GenomeAdapter.ipynb
notebooks/ontology-data-packs/: data_preparation.ipynb  ontology-data-prep.ipynb
notebooks/open-targets/: open-targets-data-preparation.ipynb
notebooks/resources/mappings/: doid_efo.mapping.json
notebooks/sc/: ScATACAdapter.ipynb  ScRNAAdapterUsage.ipynb
