[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "biobox-analytics"
authors = [{name = "Christopher Li", email = "chris@biobox.io"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://biobox.io"