[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "biobox-analytics"
version = "0.1.2"
readme = "README.md"
readme-content-type = "text/markdown" 
authors = [{name = "Christopher Li", email = "chris@biobox.io"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Home = "https://biobox.io"