[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "biobox-analytics"
description = "BioBox CLI for data manipulation in python"
version = "0.1.6"
readme = "README.md"
readme-content-type = "text/markdown" 
authors = [{name = "Christopher Li", email = "chris@biobox.io"},{name = "Hamza Farooq", email = "hamza@biobox.io"},{name = "Julian Mazzitelli", email = "julian@biobox.io"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "scanpy",
    "gtfparse"
]

[project.urls]
Home = "https://biobox.io"